<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="25dp"
    android:background="@drawable/bottom_dialog_bg"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/enter_cc_line"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/cc_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@null"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:drawableStart="@drawable/round_add_24"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:inputType="number"
        android:text="091"
        android:textColor="#1B1B1B"
        android:textSize="38sp"
        android:maxLength="3"
        android:hint="@string/_000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/selectedCC_doneBtn"
        android:layout_width="130dp"
        android:layout_height="@dimen/min_btn_height"
        android:text="@string/done"
        android:textColor="@color/white"
        android:background="@drawable/selectable_main_btn_bg"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cc_edittext"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>