<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <include
        android:id="@+id/dialerView"
        layout="@layout/number_keyboard_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/msg_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/msg_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_btn_height"
        android:layout_margin="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/selectable_outline_btn_bg"
        android:text="@string/massage_short"
        android:textColor="@color/lite_txt_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/whatsChatBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/min_btn_height"
        android:layout_margin="12dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:background="@drawable/selectable_main_btn_bg"
        android:text="@string/whats_chat_btn_dis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/msg_btn" />


    <LinearLayout
        android:id="@+id/no_display_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/tw_radius_bg"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="22dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/countryCodeBtn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#454545"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="+91"
            tools:ignore="HardcodedText" />

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_gravity="center"
            android:layout_height="15dp"
            android:background="?android:attr/listDivider" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:scrollbarSize="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/display_no_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="start"
                android:text="9876543210"
                android:hint="@string/number_placeholder"
                android:letterSpacing="0.18"
                android:padding="16dp"
                android:maxLength="16"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="HardcodedText" />

        </HorizontalScrollView>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>